# approval-factory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
clarifications/GOAL-007-DEMO/: CLR-008-DEMO.md
clarifications/GOAL-RH-001/: CLAR-001.md
clarifications/GOAL-RH-002/: CLAR-002.md
config/: gates.yaml  project.example.yaml  roles.yaml
docs/adr/: ADR-001-approval-first.md  ADR-002-pr-sized-execution.md  ADR-003-file-based-approval-queue.md
docs/contracts/: approval-request-contract.md  clarification-draft-contract.md  evidence-bundle-contract.md  pr-contract.md  pr-plan-draft-contract.md  status-contract.md  work-item-contract.md  work-item-draft-contract.md
docs/design/: architecture.md  domain-model.md  mvp-system-design.md
docs/ops/: demo-script.md  how-to-run-codex-sessions.md  how-we-work.md  runbook.md  (+2 more)
factory/: __init__.py  __main__.py
goals/: GOAL-007-DEMO.md  GOAL-RH-001.md  GOAL-RH-002.md
orchestrator/: __init__.py  cli.py  models.py  pipeline.py  yaml_io.py
project_context/: acceptance-rules.md  coding-rules.md  constraints.md  product.md  tech-stack.md
prompts/: architect.md  docs-sync.md  implementer.md  planner.md  qa.md  reviewer.md
templates/: adr.md  approval-request.yaml  docs-sync-report.yaml  docs-sync.md  evidence-bundle.yaml  pr-plan.md  qa.md  review.md  work-item.yaml
tests/: test_cli.py  test_pipeline_approval_loop.py  test_pipeline_bootstrap.py  test_pr_loop_fixture_examples.py  test_pr_loop_gate_check.py  test_pr_loop_inspect.py  test_pr_loop_merge_dry_run.py  test_pr_loop_render_review.py  test_pr_loop_state_cli.py
(+240 files in other folders)
